# client-lib

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
backupchan/: .__init__.py.swp  .connection.py.swp  .models.py.swp  __init__.py  api.py  connection.py  models.py  models.py.bak
tests/: .conftest.py.swp  conftest.py  test_models.py  test_models.py.bak
