[project]
name = "backupchan-client-lib"
version = "0.1.0"
description="Library for interfacing with Backup-chan."
authors = [
    { name="Moltony", email="koronavirusnyj@gmail.com" } # but I probably won't respond...
]
dependencies = [
    "requests"
]

readme = "README.md"
license = {text = "BSD-3-Clause"}

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
dev = [
    "pytest",
    "requests-mock"
]
